# MarketMinds

./: .gitignore  README.md  backtest_simulation.py  financial_analysis_server.py  option_chain.py  pyproject.toml  requirements.txt  setiment_analysis.py
